<resources>
    <string name="app_name">BMI calculator</string>
    <string name="mass_kg">Mass</string>
    <string name="heigh_cm">Height</string>
    <string name="count">COUNT</string>
    <string name="mass_input">Your weight</string>
    <string name="height_input">Your height</string>
    <string name="about_author">O Autorze</string>
    <string name="BMI_string">BMI:</string>
    <string name="save_title">save</string>
    <string name="back_title">Go back</string>
    <string name="author_credentials">Rafał Lechowicz</string>
    <string name="author_photo_description">Some meme lol xD</string>
    <string name="english_units_string">English units</string>
    <string name="imperial_units_string">Imperial units</string>

    <string name="title_activity_about_author">AboutAuthorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fill_both_fields_warning">Fill in both fields</string>
    <string name="back_arrow_string">Back arrow</string>
    <string name="wrong_input_data_toast">Correct your input data</string>
    <string name="saved_toast">Saved!</string>
    <string name="saved_result_value_text">saved_result_value</string>
    <string name="saved_weight_value_text">saved_weight_value</string>
    <string name="saved_height_value_text">saved_height_value</string>
    <string name="saved_isChecked_value_text">saved_isChecked_value</string>
    <string name="empty_string"></string>
</resources>
